# boilerplate-pybind-cmake

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  setup.py
app/: CMakeLists.txt  app.cpp
cmake/: README.md
docs/: CMakeLists.txt  MainPage.md
include/example/: lib.hpp
include/example/cmake/: version.h.in
python/: CMakeLists.txt  bindings.cpp
src/: CMakeLists.txt  lib.cpp
